--- a/charts/registry-scanner/tests/job_test.yaml
+++ b/charts/registry-scanner/tests/job_test.yaml
@@ -38,8 +38,8 @@ tests:
         enabled: true
     asserts:
       - equal:
-          path: metadata.labels['product-type']
+          path: metadata.labels['app.kubernetes.io/component']
           value: registry-scanner-orchestrator
       - equal:
-          path: spec.template.metadata.labels['product-type']
+          path: spec.template.metadata.labels['app.kubernetes.io/component']
           value: registry-scanner-orchestrator
