--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -7,11 +7,12 @@ global:
     name: ""
   sysdig:
     accessKey: ""
+    # When no region is suitable (e.g. on-premise installations) set the `apiHost:` parameter.
     region: "us1"
-    # apiHost is used to manually set the Sysdig backend host
-    # when no region is suitable (e.g. on-premise installations)
-    # Must have the protocol (http:// or https://)
     # apiHost: ""
+    # apiHost is used to manually set the Sysdig backend host
+    # Must have the protocol (http:// or https://)
+
     # skipVerifyCertificate might be used in on-premise installations.
     skipVerifyCertificate: false
 
@@ -30,12 +31,12 @@ runtimeStatusIntegrator:
     repository: sysdig/runtime-status-integrator
     pullPolicy: IfNotPresent
     tag: "0.1.0"
-
   # Params to manage leader election
   # Leader election is implemented leveraging the native capabilities of Kubernetes
   # see: https://kubernetes.io/blog/2016/01/simple-leader-election-with-kubernetes/
   # leaderElectionLeaseNameOverride: ""
   # leaderElectionLeaseNamespaceOverride: ""
+
   multiCluster:
     # kubeconfigSecretName: ""
 
