--- a/charts/registry-scanner/tests/cronjob_test.yaml
+++ b/charts/registry-scanner/tests/cronjob_test.yaml
@@ -64,3 +64,12 @@ tests:
       - equal:
           path: apiVersion
           value: batch/v1
+
+  - it: sets default labels
+    asserts:
+      - equal:
+          path: metadata.labels['app.kubernetes.io/component']
+          value: registry-scanner-orchestrator
+      - equal:
+          path: spec.jobTemplate.spec.template.metadata.labels['app.kubernetes.io/component']
+          value: registry-scanner-orchestrator
