--- a/charts/registry-scanner/tests/job_test.yaml
+++ b/charts/registry-scanner/tests/job_test.yaml
@@ -32,3 +32,14 @@ tests:
           content:
             name: FOO
             value: bar
+  - it: sets default labels
+    set:
+      scanOnStart:
+        enabled: true
+    asserts:
+      - equal:
+          path: metadata.labels['app.kubernetes.io/component']
+          value: registry-scanner-orchestrator
+      - equal:
+          path: spec.template.metadata.labels['app.kubernetes.io/component']
+          value: registry-scanner-orchestrator
