--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -52,17 +52,17 @@ tests:
     set:
       runtimeStatusIntegrator.image.registry: registry-rsi.io
       runtimeStatusIntegrator.image.repository: test.com/repo
-      runtimeStatusIntegrator.image.tag: rsi
+      runtimeStatusIntegrator.image.tag: "0.3.4"
       imageSbomExtractor.image.registry: registry-ise.io
       imageSbomExtractor.image.repository: test-ise.com/repo
-      imageSbomExtractor.image.tag: ise
+      imageSbomExtractor.image.tag: "0.0.1"
     asserts:
       - equal:
           path: spec.template.spec.containers[0].image
-          value: registry-rsi.io/test.com/repo:rsi
+          value: registry-rsi.io/test.com/repo:0.3.4
       - equal:
           path: spec.template.spec.containers[1].image
-          value: registry-ise.io/test-ise.com/repo:ise
+          value: registry-ise.io/test-ise.com/repo:0.0.1
 
   - it: "sets kubeconfig env var if set"
     set:
@@ -133,3 +133,96 @@ tests:
                 key: eve_enabled
                 name: test-release-cluster-scanner
                 optional: true
+
+  - it: "fails if the onPremCompatibilityVersion is not set and the runtimeStatusIntegrator version is incorrect"
+    set:
+      global.onPremCompatibilityVersion: null
+      runtimeStatusIntegrator.image.tag: "0.3.4"
+      imageSbomExtractor.image.tag: "1.3.4"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 0.3.4 expected >= 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is not set and the imageSbomExtractor version is incorrect"
+    set:
+      global.onPremCompatibilityVersion: null
+      runtimeStatusIntegrator.image.tag: "1.3.4"
+      imageSbomExtractor.image.tag: "0.1.0"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 0.1.0 expected >= 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is set to 6.2 and the runtimeStatusIntegrator version is incorrect"
+    set:
+      global.onPremCompatibilityVersion: "6.2"
+      runtimeStatusIntegrator.image.tag: "4.3.4"
+      imageSbomExtractor.image.tag: "0.3.4"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 4.3.4 expected < 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is not set to 6.2 the imageSbomExtractor version is incorrect"
+    set:
+      global.onPremCompatibilityVersion: "6.2"
+      runtimeStatusIntegrator.image.tag: "0.0.1"
+      imageSbomExtractor.image.tag: "6.1.0"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 6.1.0 expected < 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is set to 6.3 and the runtimeStatusIntegrator version is incorrect"
+    set:
+      global.onPremCompatibilityVersion: "6.3"
+      runtimeStatusIntegrator.image.tag: "0.3.4"
+      imageSbomExtractor.image.tag: "1.3.4"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 0.3.4 expected >= 1.0.0"
+
+  - it: "fails if the onPremCompatibilityVersion is not set to 6.3 the imageSbomExtractor version is incorrect"
+    set:
+      global.onPremCompatibilityVersion: "6.3"
+      runtimeStatusIntegrator.image.tag: "1.3.4"
+      imageSbomExtractor.image.tag: "0.1.0"
+    asserts:
+      - failedTemplate:
+          errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 0.1.0 expected >= 1.0.0"
+
+  - it: "succeeds if the onPremCompatibilityVersion is not set and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
+    set:
+      global.onPremCompatibilityVersion: null
+      runtimeStatusIntegrator.image.tag: "2.3.4"
+      imageSbomExtractor.image.tag: "1.0.0"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].image
+          value: quay.io/sysdig/runtime-status-integrator:2.3.4
+      - equal:
+          path: spec.template.spec.containers[1].image
+          value: quay.io/sysdig/image-sbom-extractor:1.0.0
+
+  - it: "succeeds if the onPremCompatibilityVersion is set to 6.2 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
+    set:
+      global.onPremCompatibilityVersion: "6.2"
+      runtimeStatusIntegrator.image.tag: "0.3.4"
+      imageSbomExtractor.image.tag: "0.9.10"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].image
+          value: quay.io/sysdig/runtime-status-integrator:0.3.4
+      - equal:
+          path: spec.template.spec.containers[1].image
+          value: quay.io/sysdig/image-sbom-extractor:0.9.10
+
+  - it: "succeeds if the onPremCompatibilityVersion is set to 6.3 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
+    set:
+      global.onPremCompatibilityVersion: "6.3"
+      runtimeStatusIntegrator.image.tag: "2.3.4"
+      imageSbomExtractor.image.tag: "1.0.0"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].image
+          value: quay.io/sysdig/runtime-status-integrator:2.3.4
+      - equal:
+          path: spec.template.spec.containers[1].image
+          value: quay.io/sysdig/image-sbom-extractor:1.0.0
