Added PSP policies for KSPM Collector
Signed-off-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>

--- a/charts/kspm-collector/values.yaml
+++ b/charts/kspm-collector/values.yaml
@@ -58,6 +58,10 @@ scc:
   # true here enables creation of Security Context Constraints in Openshift
   create: true
 
+psp:
+  # true here enables creation of Pod Security Policy to allow the agent run with the required permissions
+  create: true
+
 serviceAccount:
   # true here enables creation of service account
   create: true
