PSP Unit test when psp.create is set to false
Signed-off-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>

--- a/charts/kspm-collector/tests/psp_test.yaml
+++ b/charts/kspm-collector/tests/psp_test.yaml
@@ -41,3 +41,14 @@ tests:
     asserts:
       - hasDocuments:
           count: 0
+
+  - it: Ensure PSP is not created when disabled
+    capabilities:
+      majorVersion: 1
+      minorVersion: 24
+    set:
+      psp:
+        create: false
+    asserts:
+      - hasDocuments:
+          count: 0
