feat(node-analyzer): support settings passed as numbers
Convert maxFileSizeAllowed and maxImageSizeAllowed settings to
int64 in Helm, overriding the default behavior (which treats these
as float64 values).

This means users can pass either an integer or string, and strings
are validated to be int64-compatible.

Closes: #1092

--- a/charts/node-analyzer/templates/runtimeScanner/runtime-scanner-configmap.yaml
+++ b/charts/node-analyzer/templates/runtimeScanner/runtime-scanner-configmap.yaml
@@ -32,9 +32,9 @@ data:
   {{- end -}}
 
   {{- if .Values.nodeAnalyzer.runtimeScanner.settings.maxImageSizeAllowed }}
-  max_image_size_allowed: {{ .Values.nodeAnalyzer.runtimeScanner.settings.maxImageSizeAllowed | quote }}
+  max_image_size_allowed: {{ .Values.nodeAnalyzer.runtimeScanner.settings.maxImageSizeAllowed | int64 | quote }}
   {{- end -}}
   {{- if .Values.nodeAnalyzer.runtimeScanner.settings.maxFileSizeAllowed }}
-  analyzer.maxFileSizeAllowed: {{ .Values.nodeAnalyzer.runtimeScanner.settings.maxFileSizeAllowed | quote }}
+  analyzer.maxFileSizeAllowed: {{ .Values.nodeAnalyzer.runtimeScanner.settings.maxFileSizeAllowed | int64 | quote }}
   {{- end -}}
 {{- end }}
