ci(): update github actions versions

--- a/.github/workflows/k8s-apis-deprecation.yml
+++ b/.github/workflows/k8s-apis-deprecation.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: "🛎️ Checkout"
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: "🔑 Expand templates for CI"
         run: |
