fix(node-analyzer): allow custom annotations on node analyzer daemonset
Allow adding custom annotations to the Node Analyzer DaemonSet similar to
what is currently supported in the agent chart.

--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -25,6 +25,10 @@ spec:
         app.kubernetes.io/name: {{ include "nodeAnalyzer.name" . }}
 {{ include "daemonset.labels" . | indent 8 }}
 {{ include "nodeAnalyzer.labels" . | indent 8 }}
+{{- if .Values.daemonset.annotations }}
+      annotations:
+{{ toYaml .Values.daemonset.annotations | indent 8 }}
+{{- end }}
     spec:
       volumes:
         {{- if include "nodeAnalyzer.deployBenchmarkRunner" . }}
