--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -35,6 +35,8 @@ gke:
   autopilot: false
 
 daemonset:
+  # Specify custom annotations for the DaemonSet
+  annotations: {}
   # Allow the DaemonSet to set labels
   labels: {}
   # Perform rolling updates by default in the DaemonSet agent
