--- a/charts/agent/templates/deployment.yaml
+++ b/charts/agent/templates/deployment.yaml
@@ -54,7 +54,7 @@ spec:
       {{- end }}
       {{- if .Values.image.pullSecrets }}
       imagePullSecrets:
-      {{ toYaml .Values.image.pullSecrets }}
+        {{ toYaml .Values.image.pullSecrets | nindent 8 }}
       {{- end }}
       containers:
         - name: sysdig-cointerface
@@ -160,8 +160,8 @@ spec:
               name: run-vol
             - mountPath: /host/var/run
               name: varrun-vol
-            - mountPath: /root/.sysdig
             {{- if (include "agent.ebpfEnabled" .) }}
+            - mountPath: /root/.sysdig
               name: bpf-probes
             - mountPath: /sys/kernel/debug
               name: sys-tracing
