--- a/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/daemonset-node-analyzer.yaml
@@ -27,7 +27,7 @@ spec:
 {{ include "nodeAnalyzer.labels" . | indent 8 }}
 {{- if .Values.daemonset.annotations }}
       annotations:
-{{ toYaml .Values.daemonset.annotations | indent 8 }}
+        {{ toYaml .Values.daemonset.annotations | nindent 8 }}
 {{- end }}
     spec:
       volumes:
