--- a/charts/rapid-response/tests/node_selector_labels_test.yaml
+++ b/charts/rapid-response/tests/node_selector_labels_test.yaml
@@ -13,11 +13,11 @@ tests:
           path: spec.template.spec.affinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution.nodeSelectorTerms
           content:
             matchExpressions:
-              - key: beta.kubernetes.io/arch
+              - key: kubernetes.io/arch
                 operator: In
                 values:
                   - amd64
-              - key: beta.kubernetes.io/os
+              - key: kubernetes.io/os
                 operator: In
                 values:
                   - linux
