--- a/charts/sysdig/values.yaml
+++ b/charts/sysdig/values.yaml
@@ -307,11 +307,11 @@ nodeImageAnalyzer:
                 values:
                   - linux
           - matchExpressions:
-              - key: beta.kubernetes.io/arch
+              - key: kubernetes.io/arch
                 operator: In
                 values:
                   - amd64
-              - key: beta.kubernetes.io/os
+              - key: kubernetes.io/os
                 operator: In
                 values:
                   - linux
@@ -393,11 +393,11 @@ nodeAnalyzer:
                 values:
                   - linux
           - matchExpressions:
-              - key: beta.kubernetes.io/arch
+              - key: kubernetes.io/arch
                 operator: In
                 values:
                   - amd64
-              - key: beta.kubernetes.io/os
+              - key: kubernetes.io/os
                 operator: In
                 values:
                   - linux
