--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -54,10 +54,10 @@ spec:
             nodeSelectorTerms:
             - matchExpressions:
               {{- if (include "agent.kubeVersionLessThan" (dict "root" . "major" 1 "minor" 14)) }}
-              - key: beta.kubernetes.io/arch
+              - key: kubernetes.io/arch
                 operator: In
                 values: {{- toYaml .Values.daemonset.arch | nindent 18 }}
-              - key: beta.kubernetes.io/os
+              - key: kubernetes.io/os
                 operator: In
                 values: {{- toYaml .Values.daemonset.os | nindent 18 }}
               {{- else }}
