--- a/charts/rapid-response/templates/daemonset.yaml
+++ b/charts/rapid-response/templates/daemonset.yaml
@@ -42,10 +42,10 @@ spec:
             nodeSelectorTerms:
             - matchExpressions:
               {{- if (include "rapidResponse.kubeVersionLessThan" (dict "root" . "major" 1 "minor" 25)) }}
-              - key: beta.kubernetes.io/arch
+              - key: kubernetes.io/arch
                 operator: In
                 values: {{- toYaml .Values.rapidResponse.arch | nindent 18 }}
-              - key: beta.kubernetes.io/os
+              - key: kubernetes.io/os
                 operator: In
                 values: {{- toYaml .Values.rapidResponse.os | nindent 18 }}
               {{- else }}
