fix(node-analyzer): allow custom annotations on node analyzer daemonset (#1097)
Co-authored-by: Marco Vito Moscaritolo <mavimo@gmail.com>

--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -25,6 +25,8 @@ gke:
   autopilot: false
 
 daemonset:
+  # Specify custom annotations for the DaemonSet
+  annotations: {}
   # Allow the DaemonSet to set labels
   labels: {}
   # Perform rolling updates by default in the DaemonSet agent
