--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -305,6 +305,8 @@ nodeAnalyzer:
         digest:
         pullPolicy: IfNotPresent
 
+      priorityClassName:
+
       resources:
         requests:
           cpu: 100m
