kspm-collector priorityClassName added

--- a/charts/kspm-collector/values.yaml
+++ b/charts/kspm-collector/values.yaml
@@ -119,6 +119,8 @@ tolerations:
     value: arm64
     effect: NoSchedule
 
+priorityClassName: 
+
 # arch and os will be used to template out a node affinity block matching everything in each list. If affinity is
 # defined, these fields will be ignored
 arch:
