--- a/charts/node-analyzer/templates/runtimeScanner/eveconnector-api-deployment.yaml
+++ b/charts/node-analyzer/templates/runtimeScanner/eveconnector-api-deployment.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       serviceAccountName: {{ template "nodeAnalyzer.serviceAccountName" .}}
       {{- if .Values.nodeAnalyzer.runtimeScanner.eveConnector.priorityClassName }}
-      priorityClassName: "{{ .Values.nodeAnalyzer.runtimeScanner.eveConnector.priorityClassName }}"
+      priorityClassName: {{ .Values.nodeAnalyzer.runtimeScanner.eveConnector.priorityClassName | quote }}
       {{- end }}
       containers:
       - name: {{ include "nodeAnalyzer.name" . }}-eveconnector-api
