--- a/charts/admission-controller/templates/webhook/secret.yaml
+++ b/charts/admission-controller/templates/webhook/secret.yaml
@@ -21,3 +21,16 @@ metadata:
 data:
   root_ca_file.crt: {{ .Values.webhook.ssl.ca.cert | b64enc | quote }}
 {{- end }}
+---
+{{- if (include "sysdig.accessKey" .) }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "admissionController.webhook.fullname" . }}-secrets
+  namespace: {{ include "admissionController.namespace" . }}
+  labels:
+    {{ include "admissionController.webhook.labels" . | nindent 4 }}
+data:
+  access_key: {{ include "sysdig.accessKey" . | b64enc | quote }}
+
+{{- end }}
