--- a/charts/admission-controller/doc.yaml
+++ b/charts/admission-controller/doc.yaml
@@ -11,7 +11,7 @@ chart:
   name: admission-controller
   #  version: v0.9.0-rc.0
   #  values: "-- generate from values file --"
-  valuesExample: "sysdig.secureAPIToken=YOUR-KEY-HERE,sysdig.url=SECURE_URL,clusterName=YOUR-CLUSTER-NAME"
+  valuesExample: "sysdig.secureAPIToken=YOUR-KEY-HERE,clusterName=YOUR-CLUSTER-NAME"
 prerequisites:
   - "Helm 3"
   - "Kubernetes v1.16+"
