--- a/charts/admission-controller/templates/webhook/service.yaml
+++ b/charts/admission-controller/templates/webhook/service.yaml
@@ -9,7 +9,7 @@ spec:
   type: {{ .Values.webhook.service.type }}
   ports:
   - name: vac
-    port: 7443
+    port: {{ .Values.webhook.v2.registrationPort }}
     targetPort: vac
   - name: http
     port: {{ .Values.webhook.service.port }}
