set logs back to "info" level

--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -225,7 +225,7 @@ webhook:
   # Dry Run request
   dryRun: false
   # Log Level - Valid Values are: error, info, debug, trace
-  logLevel: DEBUG
+  logLevel: info
 
   ssl:
     # Reuse existing TLS Secret during chart upgrade
