--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -128,8 +128,7 @@ webhook:
     container: 
       name: secure-admission-controller
       port: 8443
-      image:  docker.io/lioralafisysdig/vac:latest # quay.io/sysdig/secure-admission-controller:1.0.0-rc  #docker.io/lioralafisysdig/vac:latest
-
+      image:   quay.io/sysdig/secure-admission-controller:1.0.0-rc  
   # Service name for Webhook deployment
   name: webhook
   # Amount of replicas for webhook. **Deprecated**, use `webhook.autoscaling.minReplicas` and `webhook.autoscaling.maxReplicas` instead.
