--- a/charts/admission-controller/templates/webhook/admissionregistration.yaml
+++ b/charts/admission-controller/templates/webhook/admissionregistration.yaml
@@ -35,8 +35,9 @@ webhooks:
       namespace: {{ include "admissionController.namespace" . }}
       name: {{ include "admissionController.webhook.fullname" . }}
       path: /validate
-      port: {{.Values.webhook.v2.container.port}}
+      port: {{ .Values.webhook.v2.registrationPort }}
     caBundle: {{ $certList._2 }}
+
   admissionReviewVersions: ["v1", "v1beta1"]
   sideEffects: None
   timeoutSeconds: {{ .Values.webhook.v2.timeoutSeconds }}
