--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -9,6 +9,6 @@ type: Opaque
 data:
   sysdig_access_key: {{ required "please provide a sysdig access key" .Values.global.sysdig.accessKey | b64enc | quote }}
   js_server_password: {{ .Values.runtimeStatusIntegrator.natsJS.password | default (randAlphaNum 32) | b64enc | quote }}
-{{- if .Values.imageSbomExtractor.cache.redis }}
+{{- if and (eq .Values.imageSbomExtractor.cache.type "redis") ((.Values.imageSbomExtractor.cache.redis).password) }}
   cache_redis_password: {{ .Values.imageSbomExtractor.cache.redis.password | b64enc | quote }}
 {{- end }}
