--- a/charts/cluster-scanner/tests/secret_test.yaml
+++ b/charts/cluster-scanner/tests/secret_test.yaml
@@ -47,8 +47,16 @@ tests:
   - it: "fills cache redis password, when set"
     set:
       global.sysdig.accessKey: "secret"
+      imageSbomExtractor.cache.type: "redis"
       imageSbomExtractor.cache.redis.password: "secret"
     asserts:
       - equal:
           path: data.cache_redis_password
           value: "c2VjcmV0"
+  - it: "does not require redis password"
+    set:
+      global.sysdig.accessKey: "secret"
+      imageSbomExtractor.cache.type: "redis"
+    asserts:
+      - isNull:
+          path: data.cache_redis_password
